# insta-save-archive

./: .env.example  .gitignore  README.md  collections_config.py  config.py  crawler.py  enrichment.py  enrichment_local.py  extractor.py  extractor_deep.py  ingest.py  ingest_batch.py  list_collections.py  notion.py  package.json  pyproject.toml  queue_pilot.py  queue_runner.py  requirements.txt  run_enrichment.py  run_enrichment_local.py  run_extraction.py  session.py
.claude/: CLAUDE.md  settings.json
.claude/docs/: ARCHITECTURE.md  CARRYOVER.md  IMPLEMENTATION_PLAN.md  PROJECT.md
.claude/hooks/: bash-firewall.mjs  code-formatter.mjs  file-protect.mjs  git-commit-guard.mjs
.claude/rules/: git.md
.claude/work/: lessons.md  session.md  tasks.md
cli/: __init__.py  isa.py
config/: collections.example.json  routes.example.json  run.example.json  tags.example.json
docs/: OPERATING.md
insta_save/: __init__.py  backup.py  enrich_schema.py  snapshots.py
insta_save/adapters/: notion.py
insta_save/backends/: api_anthropic.py  base.py  claude_code.py  claude_p.py  cowork.py  local_ollama.py  prompt.py  sanitize.py
insta_save/config/: __init__.py  collections.py  env.py  routes.py  run.py  tags.py
insta_save/engines/: ocr.py  ocr_clean.py  transcript.py
insta_save/helpers/: observability.py  tui.py
insta_save/orchestrator/: calibrate_gate.py  config_gate.py  guardrails.py  pipeline.py  preflight.py  run_control.py  runner.py  sequence.py  status_report.py
insta_save/stages/: calibrate.py  deterministic.py  discover.py  enrich.py  extract.py  ingest.py  route.py  select.py
legacy/: .env.example  README.md
legacy/pipeline/: config.py  crawler.py  display.py  extractor_deep.py  notion.py  reconcile.py  runner.py  session.py  snapshots.py  titler.py
legacy/prompts/: enrichment_v1.0-enrich.txt
legacy/scripts/: list_collections.py  title.py
pipeline/: collections.py  config.py  crawler.py  discovery.py  enrich_claude.py  enrich_local.py  extract_runner.py  extractor.py  extractor_deep.py  ingest.py  notion.py  observability.py  queue_runner.py  runner.py
prompts/: calibrate_v2.0.txt  deterministic_title_v2.0.txt  enrich_v2.0.txt  enrich_vision_v2.0.txt
scripts/: extract.py  ingest.py  ingest_batch.py  promote.py  queue_pilot.py  run_enrichment.py  run_enrichment_claude_code.py  run_enrichment_local.py  run_extraction.py  summarize.py  title.py
tests/: test_backup.py  test_cli.py  test_config_run.py  test_display.py  test_enrich_schema.py  test_env.py  test_extract_stage.py  test_notion_adapter.py  test_ocr_engine.py  test_reconcile.py  test_snapshots.py  test_transcript_engine.py
tests/adapters/: test_crawl.py  test_display.py  test_extractor.py  test_harvest.py  test_notion.py  test_notion_enrich.py  test_session.py
tests/backends/: test_api_anthropic.py  test_base.py  test_claude_code.py  test_claude_p.py  test_cowork.py  test_local_ollama.py  test_prompt.py  test_sanitize.py
tests/config/: test_collections.py  test_env.py  test_routes.py  test_run.py  test_tags.py
tests/engines/: test_ocr.py  (+2 more)
(+26 files in other folders)
