[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "insta-save-archive"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "questionary>=2.0",
]

[project.scripts]
isa = "cli.isa:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["insta_save*", "cli*"]

[tool.pytest.ini_options]
# importlib mode gives each test file a path-unique identity rather than relying on
# unique basenames across the tree — cheap insurance as the suite grows.
addopts = "--import-mode=importlib"
# Scope collection to tests/ so a bare `pytest` never collects stray *_test.py scratch
# under tmp/ (which can run live code on import). The suite lives entirely in tests/.
testpaths = ["tests"]

[tool.black]
# 100 matches the existing v2 convention (most lines wrap at 100); Black's default
# 88 would needlessly rewrap ~700 lines.
line-length = 100
target-version = ["py312"]
